--- a/CSS/style.css
+++ b/CSS/style.css
@@ -64,3 +64,20 @@
 .intro p{
     font-size: 1.2rem;
 }
+
+/*=====experience=====*/
+.exp{
+    min-height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 4px;
+    background-color: #D1D0A3;
+}
+
+.exp h2{
+    color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
+    line-height: 2.5rem ;
+}
