--- a/CSS/style.css
+++ b/CSS/style.css
@@ -127,10 +127,11 @@
 }
 #extra p {
     font-size: 1rem;
+    display: flex;
     justify-content: center;
 }
 
-.ext h2{
+#extra h2{
     display: flex;
     justify-content: center;
     
@@ -146,14 +147,13 @@
 .act{
     width: 100%;
     height: 43px;
-    border: 1px solid black;
+    border: 1px solid rgb(0, 0, 0);
     margin: 2px;
 }
 
 
 .wins{
-    display: flex;
-    justify-content: space-between;
+
     margin: 20px;
 }
 /*===interest*/
@@ -164,8 +164,17 @@
     color: rgb(0, 0, 0);
     margin : 10px;
     justify-content: center;
-    background-color: #98B9AB;
+    background-color: #D1D0A3;
     border-radius: 5px;
+}
+
+#interests h2{ 
+    display: flex;
+    justify-content: center;
+}
+
+.int ul{
+    margin: 20px;
 }
 
 
