--- a/CSS/style.css
+++ b/CSS/style.css
@@ -115,17 +115,12 @@ nav {
   min-height: 10vh;
   color: rgb(0, 0, 0);
   margin: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background-color: #d1d0a3;
   border-radius: 5px;
 }
 /*=====Subjects=====*/
 .edu p {
   font-size: 1rem;
-  display: flex;
-  justify-content: center;
 }
 
 .Subjects {
@@ -134,6 +129,7 @@ nav {
   justify-content: space-between;
   position: relative;
   top: 35px;
+  margin: 25px;
   transition: 0.3s ease;
   transition-property: background-color, color;
 }
@@ -165,8 +161,6 @@ nav {
 }
 #extra p {
   font-size: 1rem;
-  display: flex;
-  justify-content: center;
 }
 
 #extra h2 {
@@ -269,8 +263,7 @@ form {
 /*===responsive design===*/
 @media only screen and (min-width:769px){
     #head {
-        background-size: 100% 100%;
-        background-repeat: no-repeat;
+        height: 110vh;
       }
 
       .input {
@@ -278,6 +271,5 @@ form {
       }
       .area {
         width: 800px;
-    
       }
 }
